Youtube Player listner

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,12 @@ android {
             maven { url "https://jitpack.io" }
         }
     }
+
+    configurations {
+        all {
+            exclude module: 'httpclient'
+        }
+    }
 }
 
 dependencies {
