--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,11 +66,11 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:cardview-v7:27.1.1'
 
-    compile 'com.google.apis:google-api-services-youtube:v3-rev120-1.19.0'
-    compile 'com.google.http-client:google-http-client-android:+'
-    compile 'com.google.api-client:google-api-client-android:+'
-    compile 'com.google.api-client:google-api-client-gson:+'
-    compile 'com.mcxiaoke.volley:library:1.0.19'
+    implementation 'com.google.apis:google-api-services-youtube:v3-rev120-1.19.0'
+    implementation 'com.google.http-client:google-http-client-android:+'
+    implementation 'com.google.api-client:google-api-client-android:+'
+    implementation 'com.google.api-client:google-api-client-gson:+'
+    implementation 'com.mcxiaoke.volley:library:1.0.19'
 
     compile 'com.alexzh:circleimageview:1.1.2@aar'
     compile 'com.github.rey5137:material:1.2.2'
