--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -48,6 +49,10 @@
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-2910452066154587~9953517117" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
 
         <activity android:name=".UI.Activity.SlideOptionScreen" />
         <activity
@@ -197,7 +202,7 @@
         <activity android:name=".Rss.SourceBasedNews" />
         <activity android:name=".YoutubeUpload.YoutubeVideoUploadScreen"
             android:configChanges="orientation|screenSize"
-            android:theme="@style/AppTheme"
+            android:theme="@style/AppThemeY"
             android:label="@string/app_name">
           <!--  <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
